# main-gate-alpr

./: .gitattributes  .gitignore  README.md  requirements.txt  utils.py
ai/: data.yaml  prepare.py  requirements.txt  test.py  train.py
ai/resources/: andrewmvd_dataset_04  andrewmvd_dataset_08
client/: Cargo.toml
client/src/: main.rs  models.rs  utils.rs  websocket.rs
db/: init.sql
server/: .env.development  main-gate-alpr-server.example.service  server.py  test_rtsp.py
